--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
         <title>krudzki website</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Strona developera krudzki." />
+        <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <p>Pierwszy akapit</p>
-        <p>Drugi akapit</p>
-        <h1>Nagłówek</h1>
+        <header>
+            <nav>Menu</nav>
+        </header>
+        <section>
 
-        <form action="form.html" method="GET">
-            <label>Podaj dane: </label><input />
+        </section>
+        <section>
+            <article>
 
-            <p>Podaj dane: <input type="text"/></p>
-            <p>Podaj dane2: <input type="time"/></p>
-            <p><input type="submit" value="Wyślij" /></p>
-            <textarea></textarea> <br />
-                     
-            <input type="number" min="1" max="10" step="2"/><br/>
-            <input type="range" min="1" max="10" value="1" /> <br />
-
-            <input  type="submit" value="Wyślij!"/> 
-            <input type="reset" value="Zresetuj!"/><br /><br />
-        </form>
-
+            </article>
+            <article>
+                
+            </article>
+        </section>
+        <footer>
+            Foot
+        </footer>
     </body>
 </html>
