Przygotowanie podstawowej struktury strony

--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <header>
-            <nav>Menu</nav>
-        </header>
-        <section>
+        <div>
+            <header>
 
-        </section>
-        <section>
-            <article>
+            </header>
+            <nav>
 
-            </article>
-            <article>
-                
-            </article>
-        </section>
-        <footer>
-            Foot
-        </footer>
+            </nav>
+            <section>
+                <section>
+
+                </section>
+            </section>
+            <footer>
+                    
+            </footer>
+        </div>
     </body>
 </html>
