--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 </head>
 
 <body>
+    <header>
+
+    </header>
+
+
+    <footer>
+
+    </footer>
+
     <div>
 
     </div>
     <div>
         <header>
-            <h1><img src="images\image1.gif" /></h1>
-            <h2>Tel. 609-836-669</h2>
-            <hr />
+
         </header>
         <nav>
             <div>
