--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>krudzki website</title>
+    <title>Krzysztof Rudzki</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Strona developera krudzki." />
     <link href="style.css" rel="stylesheet" type="text/css" />
