--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <header>
-        <nav>
-            <li><a href="#">Homepage</a></li>
-            <li><a href="#">Projekty</a></li>
-            <li><a href="#">O mnie</a></li>
-            <li><a href="#">Kontakt</a></li>
+        <nav class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Contact</a></li>
         </nav>
     </header>
 </body>
