--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Krzysztof Rudzki</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Strona developera krudzki." />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
