--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Krzysztof Rudzki</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Strona developera krudzki." />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./styles/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <header>
         <nav class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a class="active" href="#">Home</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">About me</a></li>
             <li><a href="#">Contact</a></li>
