--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 <body>
     <header>
         <nav class="menu">
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">About me</a></li>
-            <li><a href="#">Contact</a></li>
+            <a class="active" href="#">Home</a>
+            <a href="#">Projects</a>
+            <a href="#">About me</a>
+            <a href="#">Contact</a>
+            < <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+                </a>
         </nav>
     </header>
 </body>
