--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <a href="#">Projects</a>
             <a href="#">About me</a>
             <a href="#">Contact</a>
-            < <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
-                </a>
+            </a>
         </nav>
     </header>
 </body>
