--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="./scripts/js/main.js"></script>
 </head>
 
 <body>
     <header>
-        <nav class="menu">
+        <nav class="topnav" id="top_nav">
             <a class="active" href="#">Home</a>
             <a href="#">Projects</a>
             <a href="#">About me</a>
